<?xml version="1.0"?>
<package format="3">
  <name>fkie_iop_client_costmap2d</name>
  <version>1.1.0</version>
  <description>The client service for IOP CostMap2D service </description>

  <author>Alexander Tiderko</author>
  <maintainer email="alexander.tiderko@fkie.fraunhofer.de">Alexander Tiderko</maintainer>
  <license>GPLv2</license>
  <url type="website">https://gitlab.fkie.fraunhofer.de/jaus/iop_sensing_clients.git</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>geographic_msgs</depend>
  <depend>fkie_iop_ocu_slavelib</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
