<?xml version="1.0"?>
<package format="3">
  <name>fkie_iop_client_path_reporter</name>
  <version>2.1.0</version>
  <description>The client service for IOP PathReporter service </description>

  <author>Alexander Tiderko</author>
  <maintainer email="alexander.tiderko@fkie.fraunhofer.de">Alexander Tiderko</maintainer>
  <license>GPLv2</license>
  <url type="website">https://github.com/fkie/iop_sensing_clients</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>fkie_iop_ocu_slavelib</depend>
  <depend>geographic_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
